<resources>
    <string name="app_name">Media Player</string>
    <string name="song_name">Song Name Will Dispaly Here</string>
    <string name="equilizer">Song Name Will Dispaly Here</string>
    <string name="favorite">Favorite Songs will display here</string>
    <string name="repeat">Current Song Will Repeating Start</string>
    <string name="fast_forward">Current Song Will Fast Forward</string>
    <string name="play_pause">When Current Music will Play or Pause</string>
    <string name="Music_Image_View">Music image will display here.</string>
    <string name="next">Next Song Will Play</string>
    <string name="tracks">TRACKS</string>
    <string name="albums">ALBUMS</string>
    <string name="artists">ARTISTS</string>
    <string name="folders">FOLDERS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="equilizer_description">Control Equalizer</string>
    <string name="this_is_song_name">this is song name</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="sort_by">Sort By</string>
    <string name="music_image">Music Image</string>
    <string name="shuffel_todo">Used to make shuffel music</string>
    <string name="previous_description">Use to move previous music</string>
    <string name="rewind_description">Will Use to rewind music</string>
    <string name="displaySongName_Text">Song Name</string>
    <string name="delete_menu">DELETE</string>
    <string name="rename_menu">RENAME</string>
    <string name="send_menu">SEND</string>
    <string name="share_menu">SHARE</string>
    <string name="property_menu">PROPERTY</string>

</resources>