<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchMusic"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        android:iconTint="@color/white"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/refreshMusic"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/musicSortBy"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/byName"
                android:title="By Name"
                android:iconTint="@color/white"
                app:showAsAction="never" />

            <item
                android:id="@+id/byDate"
                android:title="By Date"
                android:iconTint="@color/white"
                app:showAsAction="never" />

            <item
                android:id="@+id/bySize"
                android:title="By Size"
                android:iconTint="@color/white"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/themes"
        android:title="Themes"
        android:icon="@drawable/ic_palette"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"
        android:visible="false"/>
</menu>