<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/audioPlayerLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@drawable/gradient_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_round_back"
                android:backgroundTint="@color/white"
                android:layout_alignParentStart="true"
                android:visibility="gone"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_menu"
                android:backgroundTint="@color/white"
                android:layout_alignParentEnd="true"
                android:visibility="gone"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/primerySet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView2"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:background="@drawable/cd_img"
                android:contentDescription="@string/Music_Image_View" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/setOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/equilizerBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_equalizer"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/equilizer" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/displaySongName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/displaySongName_Text"/>


                <TextView
                    android:id="@+id/artistName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:text="Artist Name"/>

            </LinearLayout>

            <ToggleButton
                android:id="@+id/favoriteList"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/ic_favorite"
                android:textSize="0sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/next"

                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/setTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/songStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:text="00:00"
                android:textColor="@color/white"
                android:textSize="20sp" />


            <SeekBar
                android:id="@+id/songSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:progressTint="@color/white"
                android:thumbTint="@color/white" />

            <TextView
                android:id="@+id/songEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:text="00:00"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/shuffle"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_shuffle"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/shuffel_todo"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/previous"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_skip_previous"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/previous_description"
                android:layout_gravity="center"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/rewind"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_fast_rewind"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/rewind_description" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/playPause"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:clickable="true"
                android:contentDescription="@string/play_pause"
                android:focusable="true"
                android:src="@drawable/ic_play" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/fastForward"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_fast_forward"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/fast_forward" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/next"
                android:layout_height="45dp"
                android:layout_width="45dp"
                android:background="@drawable/ic_skip_next"
                android:backgroundTint="@color/white"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/repeat"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_repeat"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/repeat" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
